2009-10-21  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el (slime-browse-system): Open the parent directory of
	an .asd file, not just files defined in it.
	(slime-open-system): Open files in another window.

	* swank-asdf.lisp (asdf-system-files): Put file with the same name as
	a system at the first place.

2009-10-21  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el (slime-browse-system): New command for browsing
	files in asdf using Dired.

	* swank-asdf.lisp (asdf-system-loaded-p): New function.

2009-10-20  Stas Boukarev  <stassats@gmail.com>

	* slime-parse.el (slime-parse-sexp-at-point): Remove unused flet.
	Check for existence of a sexp before trying to parse, not after.

2009-10-19  Stas Boukarev  <stassats@gmail.com>

	* slime-asdf.el (slime-open-system): New command for opening all files
	in a system.

	* swank-asdf.lisp (asdf-system-files): New function for listing all
	files in a system.

2009-10-15  Helmut Eller  <heller@common-lisp.net>

	* slime-repl.el (slime-repl-find-buffer-package): New function.
	(slime-repl-init): Initialize slime-find-buffer-package-function.

2009-10-14  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-sprof.el (slime-sprof-browser-mode-map): Make
	`slime-parent-map' its parent.

2009-10-12  Stas Boukarev  <stassats@gmail.com>

	* slime-repl.el (slime-repl-set-package): Don't double unfinished input
	and don't move point if it's inside the input area.

2009-10-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime-fontifying-fu.el (slime-search-suppressed-forms): Add
	clause for new condition `slime-incorrect-feature-expression'.
	([test] font-lock-magic): Add new test case.

2009-10-09  Stas Boukarev  <stassats@gmail.com>

	* swank-sprof.lisp: Add ability to exclude functions which symbols
	are from swank package.
	* slime-sprof.el (slime-sprof-toggle-swank-exclusion): New function.
	Bound to s in the slime-sprof buffer.
	* slime-sprof.el (slime-sprof-exclude-swank): New variable for